--- a/Public/dashboard.html
+++ b/Public/dashboard.html
@@ -537,7 +537,7 @@
               <div class="box-relative">
                 <div class="box4">
                     <div class="innerbox1">
-                        <p>UnlimitedSfunds Bank Premium</p>
+                        <p>Unlimitedfunds Bank Premium</p>
                         <img src="image/Chip--Streamline-Mynaui.svg.svg" alt="">
                     </div>
                     <p class="accountNumber">0082 2618 2783 1129</p>
@@ -548,7 +548,7 @@
                 </div>
                 <div  class="box4 box5">
                     <div class="innerbox1">
-                        <p>UnlimitedSfunds Bank Premium</p>
+                        <p>Unlimitedfunds Bank Premium</p>
                         <img src="image/Chip--Streamline-Mynaui.svg.svg" alt="">
                     </div>
                     <p class="accountNumber">0082 2618 2783 1129</p>
