--- a/Public/texting.html
+++ b/Public/texting.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Account Approved</title>
+    <title>Contact Form Submission</title>
     <style>
       body {
         border: none;
@@ -63,6 +63,16 @@
         line-height: 1.5;
       }
 
+      .message-box {
+        background-color: #f9f9f9;
+        padding: 15px;
+        border-radius: 6px;
+        margin-top: 15px;
+        font-size: 16px;
+        text-align: left;
+        white-space: pre-line;
+      }
+
       .btn {
         display: inline-block;
         padding: 12px 20px;
@@ -76,13 +86,6 @@
 
       .btn:hover {
         background-color: #0056b3;
-      }
-
-      .enquiries {
-        text-align: center;
-        padding-top: 20px;
-        font-size: 15px;
-        color: #555;
       }
 
       .footer {
@@ -132,30 +135,23 @@
           <img src="image/logo.png" alt="logo" width="150" />
         </div>
         <div class="email-title">
-          <h2>Account Approved</h2>
+          <h2>New Contact Form Submission</h2>
         </div>
         <div class="email-content">
-          <p>Dear <strong>jame emmanuel</strong>,</p>
-          <p>Your account has been approved.</p>
-          <p>You can proceed to your dashboard using the link below or by logging in with your email and password.</p>
-          <a href="#" class="btn">Go to Dashboard</a>
-        </div>
-        <div class="enquiries">
-          <p>
-            For more enquiries, please contact our customer service at
-            <strong>support@UnlimitedSfundsBank.com</strong> or call
-            <strong>+311 6384 8274</strong>.
-          </p>
+          <p><strong>First Name:</strong> John</p>
+          <p><strong>Last Name:</strong> Doe</p>
+          <p><strong>Email:</strong> johndoe@example.com</p>
+          <div class="message-box">
+            <p><strong>Message:</strong></p>
+            <p>Hello, I would like to inquire about your services. Please get back to me as soon as possible.</p>
+          </div>
+          <a href="mailto:johndoe@example.com" class="btn">Reply to Email</a>
         </div>
         <footer class="footer">
           <div class="footer-flex">
-            <h4>UnlimitedSfunds Bank Ltd.</h4>
-            <p>
-              Making the world a better place through constructive financial
-              solutions. Our innovative banking services empower individuals and
-              businesses worldwide.
-            </p>
-            <p>&copy; 2025 UnlimitedSfundsBank - All rights reserved.</p>
+            <h4>Your Company Name</h4>
+            <p>Thank you for reaching out to us. We will get back to you soon.</p>
+            <p>&copy; 2025 YourCompany - All rights reserved.</p>
           </div>
         </footer>
       </div>
