--- a/Public/forgetpassword.html
+++ b/Public/forgetpassword.html
@@ -18,6 +18,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
+        font-family: inter;
       }
       #content {
         background-color: #e0eae8;
@@ -85,7 +86,7 @@
       .button {
         width: 100%;
         padding: 10px;
-        background: #007bff;
+        background: #3E8076;
         color: #fff;
         border: none;
         border-radius: 5px;
@@ -99,7 +100,7 @@
       }
 
       .button:hover {
-        background: #0056b3;
+        background: #3E8076;
       }
       .preloader {
         position: fixed;
@@ -152,7 +153,7 @@
         display: block;
         margin-top: 15px;
         font-size: 14px;
-        color: #007bff;
+        color: #3E8076;
         text-decoration: none;
       }
 
