--- a/Public/admin.html
+++ b/Public/admin.html
@@ -100,8 +100,8 @@
                 <div class="user-list">
                   <div class="optionBox">
                     <div class="userOpt-p">
-                      <p class="userOptNumber">1</p>
-                      <p class="userOptName">Mercy Jordan</p>
+                      <p class="userOptNumber"></p>
+                      <p class="userOptName"></p>
                     </div>
                     <div class="optionButton">
                       <button class="ViewHistoryBtn">View History</button>
@@ -117,14 +117,14 @@
               <div class="users approvedUsers">
                 <div class="user">
                   <div class="profie-dv">
-                    <h2>MJ</h2>
+                    <h2></h2>
                   </div>
                   <div>
-                    <p>Mercy Jordan</p>
+                    <p></p>
                   </div>
                   <div class="belowbtn">
-                    <button class="view-verified-btn">View user</button>
-                    <button class="editUser">Edit user</button>
+                    <button class="view-verified-btn"></button>
+                    <button class="editUser"></button>
                   </div>
                 </div>
               </div>
