--- a/Public/password.html
+++ b/Public/password.html
@@ -3,13 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Forgot Password</title>
-
-    <!-- Toastify CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
-    <!-- Toastify JS -->
-    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-
+    <title>Reset Password</title>
     <style>
       * {
         margin: 0;
@@ -24,8 +18,8 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
+        font-family: inter;
       }
-
       #content {
         background-color: #e0eae8;
         width: 100%;
@@ -33,8 +27,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        opacity: 0; /* Initially hidden */
-        transition: opacity 0.5s ease-in;
+        opacity: 0;
       }
 
       .container {
@@ -43,10 +36,11 @@
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         width: 350px;
+        height: fit-content;
         text-align: center;
         box-sizing: border-box;
         transform: scale(0.1);
-        animation: zoomIn 0.7s ease-out forwards;
+        animation: zoomIn 4s ease-out forwards;
       }
 
       @keyframes zoomIn {
@@ -92,7 +86,7 @@
       .button {
         width: 100%;
         padding: 10px;
-        background: #3e8076;
+        background: #3E8076;
         color: #fff;
         border: none;
         border-radius: 5px;
@@ -106,9 +100,8 @@
       }
 
       .button:hover {
-        background: #2f6358;
+        background: #3E8076;
       }
-
       .preloader {
         position: fixed;
         top: 0;
@@ -123,16 +116,17 @@
         transition: opacity 0.5s ease-out;
       }
 
-      .preloader.hidden {
+      .hidden {
         opacity: 0;
         visibility: hidden;
+        transition: opacity 0.5s ease-out;
       }
-
+      /* Loader Animation */
       .spin {
         width: 50px;
         height: 50px;
         border: 5px solid rgba(62, 128, 118, 0.3);
-        border-top: 5px solid #3e8076;
+        border-top: 5px solid #3E8076;
         border-radius: 50%;
         animation: spin 1s linear infinite;
       }
@@ -145,7 +139,6 @@
           transform: rotate(360deg);
         }
       }
-
       .spinner {
         width: 16px;
         height: 16px;
@@ -160,17 +153,16 @@
         display: block;
         margin-top: 15px;
         font-size: 14px;
-        color: #3e8076;
+        color: #3E8076;
         text-decoration: none;
       }
 
       .back-link:hover {
         text-decoration: underline;
       }
-
       @media screen and (max-width: 720px) {
         .container {
-          width: 80%;
+          width: 100%;
         }
       }
     </style>
@@ -179,18 +171,32 @@
     <div class="preloader" id="preloader">
       <div class="spin"></div>
     </div>
-
-    <main id="content">
+    <main id="content" class="main-content">
       <div class="container">
-        <h2>Forgot Password</h2>
-        <p>Enter your email to receive a password reset link.</p>
+        <h2>Reset Password</h2>
+        <p>Enter your new password and confirm it.</p>
 
         <form id="resetForm">
-          <label for="email">Email Address</label>
-          <input type="email" id="email" name="email" required placeholder="Enter your email" />
+          <label for="newPassword">New Password</label>
+          <input
+            type="password"
+            id="newPassword"
+            name="newPassword"
+            required
+            placeholder="Enter new password"
+          />
+
+          <label for="confirmPassword">Confirm Password</label>
+          <input
+            type="password"
+            id="confirmPassword"
+            name="confirmPassword"
+            required
+            placeholder="Confirm new password"
+          />
 
           <button type="submit" class="button" id="submitBtn">
-            <span class="button-text">Send Reset Link</span>
+            <span class="button-text">Reset Password</span>
             <div class="spinner" id="spinner"></div>
           </button>
         </form>
@@ -198,72 +204,40 @@
         <a href="login.html" class="back-link">Back to Login</a>
       </div>
     </main>
-
     <script>
-      // Fix for Preloader Issue
-      window.onload = function () {
-        const preloader = document.getElementById("preloader");
-        const content = document.getElementById("content");
+      document
+        .getElementById("resetForm")
+        .addEventListener("submit", function (event) {
+          event.preventDefault(); // Prevent actual form submission
 
+          var button = document.getElementById("submitBtn");
+          var spinner = document.getElementById("spinner");
+          var buttonText = document.querySelector(".button-text");
+
+          buttonText.textContent = "Resetting...";
+          spinner.style.display = "inline-block";
+          button.disabled = true;
+
+          // Simulate loading (e.g., API request)
+          setTimeout(function () {
+            buttonText.textContent = "Password Reset!";
+            spinner.style.display = "none";
+            button.style.background = "#28a745"; // Change to green after success
+          }, 3000);
+        });
+      const preloader = document.getElementById("preloader");
+      const content = document.getElementById("content");
+
+      window.onload = function () {
         setTimeout(() => {
           preloader.classList.add("hidden");
           setTimeout(() => {
-            content.style.opacity = "1"; // Make content visible
+            preloader.style.display = "none"; // Hide preloader completely
+            content.style.display = "flex"; // Show the content
+            content.style.opacity = "1"; // Fade it in
           }, 500);
-        }, 1000);
+        }, 1000); // Ensures a smooth transition
       };
-
-      // Form Submission with Toastify
-      document.getElementById("resetForm").addEventListener("submit", async function (event) {
-        event.preventDefault();
-
-        const button = document.getElementById("submitBtn");
-        const spinner = document.getElementById("spinner");
-        const buttonText = document.querySelector(".button-text");
-        const email = document.getElementById("email").value;
-
-        buttonText.textContent = "Sending...";
-        spinner.style.display = "inline-block";
-        button.disabled = true;
-
-        try {
-          const response = await fetch("https://unlimitedfunds.onrender.com/api/v1/forgot/password", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ email: email }),
-          });
-
-          const result = await response.json();
-
-          if (response.ok) {
-            buttonText.textContent = "Sent!";
-            button.style.background = "#28a745";
-
-            Toastify({
-              text: "Reset link sent successfully!",
-              duration: 3000,
-              gravity: "top",
-              position: "right",
-              backgroundColor: "#28a745",
-            }).showToast();
-          } else {
-            throw new Error(result.message || "Something went wrong.");
-          }
-        } catch (error) {
-          buttonText.textContent = "Send Reset Link";
-
-          Toastify({
-            text: error.message,
-            duration: 3000,
-            gravity: "top",
-            position: "right",
-            backgroundColor: "#dc3545",
-          }).showToast();
-        } finally {
-          spinner.style.display = "none";
-          button.disabled = false;
-        }
-      });
     </script>
   </body>
 </html>
