--- a/Public/index.html
+++ b/Public/index.html
@@ -164,7 +164,7 @@
               effortlessly with our super intuitive digital platform
             </p>
             <div class="inner-div">
-              <a class="section1-btn" href="signup.html">Open account</a>
+              <a class="section1-btn" href="signUp/signup.html">Open account</a>
               <div class="inner-div1">
                 <p class="icon-p">
                   <img src="image/rating.png" alt="" />
